--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "hono": "2.7.2"
   },
   "devDependencies": {
+    "prettier": "^2.8.3",
     "standard": "^17.0.0",
     "vitest": "^0.27.1",
     "wrangler": "2.7.1"
   },
   "eslintConfig": {
-    "extends": "standard"
+    "extends": "standard",
+    "rules": {
+      "space-before-function-paren": "off"
+    }
   }
 }
