--- a/.github/workflows/scrape-lnfs-web.yml
+++ b/.github/workflows/scrape-lnfs-web.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: pnpm/action-setup@v2
         with:
           version: 7.24.3
+          run_install: true
       - run: |
           node scraping/leaderboard.js
           git config user.name futsal-bot
