--- a/.github/workflows/scrape-lnfs-web.yml
+++ b/.github/workflows/scrape-lnfs-web.yml
@@ -4,15 +4,13 @@ on:
   workflow_dispatch:
   schedule:
     - cron: "*/30 22,23 * * 0"
-    
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
-      # Fetch all history for all tags and branches
+      # fetch-depth 1 is the default (last commit)
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -26,4 +24,3 @@ jobs:
           git add -A
           git commit -m "[bot] ci(db): :card_file_box: Update LNFS database"
           git push origin main
-          
