--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -12,6 +12,13 @@ jobs:
     steps:
       # fetch-depth 1 is the default (last commit)
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.24.3
+          run_install: true
       - name: Publish
         uses: cloudflare/wrangler-action@2.0.0
         with:
