build(deps): :heavy_plus_sign: Add Astro + Tailwind integration + Prettier and ESLint plugins
Config for ESLint updated for Astro

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,25 @@
 {
-  "conventionalCommits.scopes": [
-    "db",
-    "pnpm",
-    "scraping",
-    "deps",
-    "api",
-    "action",
-    "test"
-  ]
+	"conventionalCommits.scopes": [
+		"db",
+		"pnpm",
+		"scraping",
+		"deps",
+		"api",
+		"action",
+		"test",
+		"config"
+	],
+	"eslint.validate": [
+		"javascript",
+		"javascriptreact",
+		"astro",
+		"typescript",
+		"typescriptreact"
+	],
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": true
+	},
+	"javascript.format.insertSpaceBeforeFunctionParenthesis": true,
+	"editor.insertSpaces": false,
+	"editor.detectIndentation": false
 }
