--- a/package.json
+++ b/package.json
@@ -5,27 +5,50 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "build": "astro build",
     "dev:api": "wrangler dev api/index.js",
+    "dev": "astro dev",
+    "preview": "astro preview",
     "publish:api": "wrangler publish api/index.js",
+    "start": "astro dev",
     "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@astrojs/tailwind": "^3.0.1",
+    "astro": "^2.0.4",
     "cheerio": "1.0.0-rc.12",
-    "hono": "2.7.2"
+    "hono": "2.7.2",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
+    "eslint-plugin-astro": "^0.23.0",
     "prettier": "^2.8.3",
+    "prettier-plugin-astro": "^0.8.0",
     "standard": "^17.0.0",
     "vitest": "^0.27.1",
     "wrangler": "2.7.1"
   },
   "eslintConfig": {
-    "extends": "standard",
+    "extends": [
+      "standard",
+      "plugin:astro/recommended"
+    ],
     "rules": {
       "space-before-function-paren": "off"
-    }
+    },
+    "overrides": [
+      {
+        "files": [
+          "*.astro"
+        ],
+        "parser": "astro-eslint-parser",
+        "rules": {
+          "astro/no-set-html-directive": "error"
+        }
+      }
+    ]
   }
 }
