--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lnfs",
   "version": "0.2.0",
-  "description": "Futsal API",
+  "description": "Futsal API and web",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -11,24 +11,26 @@
     "preview": "astro preview",
     "publish:api": "wrangler publish api/index.js",
     "start": "astro dev",
-    "test": "vitest"
+    "test": "vitest",
+		"test:cov": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@astrojs/tailwind": "^3.0.1",
-    "astro": "^2.0.4",
+    "@astrojs/tailwind": "3.0.1",
+    "astro": "2.0.4",
     "cheerio": "1.0.0-rc.12",
     "hono": "2.7.2",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "3.2.6"
   },
   "devDependencies": {
-    "eslint-plugin-astro": "^0.23.0",
-    "prettier": "^2.8.3",
-    "prettier-plugin-astro": "^0.8.0",
-    "standard": "^17.0.0",
-    "vitest": "^0.27.1",
+		"@vitest/coverage-c8": "0.28.4",
+    "eslint-plugin-astro": "0.23.0",
+    "prettier": "2.8.3",
+    "prettier-plugin-astro": "0.8.0",
+    "standard": "17.0.0",
+    "vitest": "0.27.1",
     "wrangler": "2.7.1"
   },
   "eslintConfig": {
