--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -6,9 +6,25 @@ on:
       - main
 
 jobs:
+  test:
+    runs-on: ubuntu-22.04
+    name: Execute tests
+    steps:
+      - uses: actions/checkout@v3
+      - uses: action/setup-node@v3
+        with:
+          node-version: 18
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 7.24.3
+          run_install: true
+      - run: pnmp test
   deploy:
+    needs: test
     runs-on: ubuntu-22.04
     name: Deploy to Cloudflare Workers with Wrangler
+    # Only deploy if the push is from the main repo
+    if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     steps:
       # fetch-depth 1 is the default (last commit)
       - uses: actions/checkout@v3
