--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -11,7 +11,7 @@ jobs:
     name: Execute tests
     steps:
       - uses: actions/checkout@v3
-      - uses: action/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 18
       - uses: pnpm/action-setup@v2
