--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "publish:api": "wrangler publish api/index.js",
     "start": "astro dev",
     "test": "vitest",
-		"test:cov": "vitest run --coverage"
+    "test:cov": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -25,11 +25,12 @@
     "tailwindcss": "3.2.6"
   },
   "devDependencies": {
-		"@vitest/coverage-c8": "0.28.4",
+    "@vitest/coverage-c8": "0.28.4",
     "eslint-plugin-astro": "0.23.0",
     "prettier": "2.8.3",
     "prettier-plugin-astro": "0.8.0",
     "standard": "17.0.0",
+    "vite": "4.1.1",
     "vitest": "0.27.1",
     "wrangler": "2.7.1"
   },
