--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "2.8.3",
     "prettier-plugin-astro": "0.8.0",
     "standard": "17.0.0",
+    "vite": "^4.1.1",
     "vitest": "0.27.1",
     "wrangler": "2.7.1"
   },
