chore(config): :bookmark: Update package name and version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lnfs",
-  "version": "0.2.0",
+  "name": "futsal",
+  "version": "0.3.0",
   "description": "Futsal API and web",
   "main": "index.js",
   "type": "module",
