ci(action): :construction_worker: Update scraping script in GitHub Action

--- a/.github/workflows/scrape-lnfs-web.yml
+++ b/.github/workflows/scrape-lnfs-web.yml
@@ -20,7 +20,7 @@ jobs:
           version: 7.24.3
           run_install: true
       - run: |
-          node scraping/leaderboard.js
+          pnpm run scrape
           git config user.name futsal-bot
           git add -A
           git commit -m "[bot] ci(db): :card_file_box: Update LNFS database"
