--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "astro build",
     "dev:api": "wrangler dev api/index.js",
     "dev": "astro dev",
+		"format": "prettier --write .",
+		"lint": "eslint . --ext .js,.astro",
+		"lint:fix": "eslint . --ext .js,.astro --fix",
     "preview": "astro preview",
     "publish:api": "wrangler publish api/index.js",
     "scrape": "node scraping/index.js",
