--- a/.github/workflows/scrape-lnfs-web.yml
+++ b/.github/workflows/scrape-lnfs-web.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   schedule:
     # At every 30th minute past every hour from 19 through 23 on Sunday, Friday, and Saturday.
-    - cron: "*/30 19-23 * * 0,5,6"
+    - cron: '*/30 19-23 * * 0,5,6'
 
 jobs:
   build:
