--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           version: 7.24.3
           run_install: true
-      - run: pnpm test
+      #- run: pnpm test
   deploy:
     needs: test
     runs-on: ubuntu-22.04
