--- a/.github/workflows/scrape-lnfs-web.yml
+++ b/.github/workflows/scrape-lnfs-web.yml
@@ -3,8 +3,8 @@ name: Scrape LNFS website
 on:
   workflow_dispatch:
   schedule:
-    # At every 30th minute past every hour from 19 through 23 on Sunday, Friday, and Saturday.
-    - cron: '*/30 19-23 * * 0,5,6'
+    # At every 30th minute past every hour from 19 through 23 from September to May on Sunday, Friday, and Saturday.
+    - cron: '*/30 19-23 * 9-12,1-5 0,5,6'
 
 jobs:
   build:
