--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,3 +4,9 @@ compatibility_date = "2023-01-16"
 
 [site]
 bucket = "./assets"
+
+[env.production]
+vars = { ENVIRONMENT = "production" }
+routes = [
+	{ pattern = "api.futsal.dev", custom_domain = true }
+]
