--- a/package.json
+++ b/package.json
@@ -31,32 +31,12 @@
   },
   "devDependencies": {
     "@vitest/coverage-c8": "0.28.4",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-astro": "0.23.0",
     "prettier": "2.8.3",
     "prettier-plugin-astro": "0.8.0",
-    "standard": "17.0.0",
     "vite": "^4.1.1",
     "vitest": "0.27.1",
     "wrangler": "2.7.1"
-  },
-  "eslintConfig": {
-    "extends": [
-      "standard",
-      "plugin:astro/recommended"
-    ],
-    "rules": {
-      "space-before-function-paren": "off"
-    },
-    "overrides": [
-      {
-        "files": [
-          "*.astro"
-        ],
-        "parser": "astro-eslint-parser",
-        "rules": {
-          "astro/no-set-html-directive": "error"
-        }
-      }
-    ]
   }
 }
