--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -9,6 +9,8 @@ jobs:
   test:
     runs-on: ubuntu-22.04
     name: Execute tests
+# Only execute if the push is from the main repo
+#   if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -23,8 +25,6 @@ jobs:
     needs: test
     runs-on: ubuntu-22.04
     name: Deploy to Cloudflare Workers with Wrangler
-    # Only deploy if the push is from the main repo
-    # if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
     steps:
       # fetch-depth 1 is the default (last commit)
       - uses: actions/checkout@v3
